
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
struct lpc32xx_tsc {struct input_dev* dev; } ;
struct input_dev {int dummy; } ;
typedef int irqreturn_t ;


 int ABS_X ;
 int ABS_Y ;
 int BTN_TOUCH ;
 int IRQ_HANDLED ;
 int LPC32XX_TSC_ADCDAT_VALUE_MASK ;
 int LPC32XX_TSC_FIFO ;
 int LPC32XX_TSC_FIFO_NORMALIZE_X_VAL (int) ;
 int LPC32XX_TSC_FIFO_NORMALIZE_Y_VAL (int) ;
 int LPC32XX_TSC_FIFO_TS_P_LEVEL ;
 int LPC32XX_TSC_STAT ;
 int LPC32XX_TSC_STAT_FIFO_EMPTY ;
 int LPC32XX_TSC_STAT_FIFO_OVRRN ;
 int input_report_abs (struct input_dev*,int ,int) ;
 int input_report_key (struct input_dev*,int ,int) ;
 int input_sync (struct input_dev*) ;
 int lpc32xx_fifo_clear (struct lpc32xx_tsc*) ;
 int tsc_readl (struct lpc32xx_tsc*,int ) ;

__attribute__((used)) static irqreturn_t lpc32xx_ts_interrupt(int irq, void *dev_id)
{
 u32 tmp, rv[4], xs[4], ys[4];
 int idx;
 struct lpc32xx_tsc *tsc = dev_id;
 struct input_dev *input = tsc->dev;

 tmp = tsc_readl(tsc, LPC32XX_TSC_STAT);

 if (tmp & LPC32XX_TSC_STAT_FIFO_OVRRN) {

  lpc32xx_fifo_clear(tsc);
  return IRQ_HANDLED;
 }






 idx = 0;
 while (idx < 4 &&
        !(tsc_readl(tsc, LPC32XX_TSC_STAT) &
   LPC32XX_TSC_STAT_FIFO_EMPTY)) {
  tmp = tsc_readl(tsc, LPC32XX_TSC_FIFO);
  xs[idx] = LPC32XX_TSC_ADCDAT_VALUE_MASK -
   LPC32XX_TSC_FIFO_NORMALIZE_X_VAL(tmp);
  ys[idx] = LPC32XX_TSC_ADCDAT_VALUE_MASK -
   LPC32XX_TSC_FIFO_NORMALIZE_Y_VAL(tmp);
  rv[idx] = tmp;
  idx++;
 }


 if (!(rv[3] & LPC32XX_TSC_FIFO_TS_P_LEVEL) && idx == 4) {

  input_report_abs(input, ABS_X, (xs[1] + xs[2]) / 2);
  input_report_abs(input, ABS_Y, (ys[1] + ys[2]) / 2);
  input_report_key(input, BTN_TOUCH, 1);
 } else {
  input_report_key(input, BTN_TOUCH, 0);
 }

 input_sync(input);

 return IRQ_HANDLED;
}
